# Test-case-RusGidro

./: .env.exemple  .gitignore  README.md  docker-compose.yml  pyproject.toml
Task description/: example_data.xlsx  rept_header.xlsx
nalog/: Dockerfile  entrypoint.sh  manage.py
nalog/checker/: exeptions.py  urls.py  views.py
nalog/checker/services/: __init__.py  config.py  report.py  schemas.py
nalog/core/: views.py
nalog/core/context_processors/: year.py
nalog/nalog/: asgi.py  settings.py  urls.py  wsgi.py
nalog/services/: report.py  schemas.py
nalog/templates/: base.html
nalog/templates/checker/: index.html
nalog/templates/core/: 404.html
nalog/templates/includes/: footer.html  header.html
nginx/: nginx.conf
templates/checker/: index.html
templates/includes/: footer.html
test_task/: test_task_text.md
